# zarrs_icechunk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
doc/: version_compatibility_matrix.md
examples/: virtualizarr_netcdf.py  virtualizarr_netcdf.rs
examples/data/test.icechunk.zarr/: config.yaml
examples/data/test.icechunk.zarr/manifests/: 1XR13MZ9RJ8472EDC4KG  3DCCYFV0Z079WDHN406G  GE317S2TQVYC301JJQ4G  XF0P6458S2CZM8PBMP6G
examples/data/test.icechunk.zarr/refs/branch.main/: ref.json
examples/data/test.icechunk.zarr/snapshots/: 1CECHNKREP0F1RSTCMT0  36P78J05EYQGW1FKMFGG  9G86EJYM6F7FGZPFPK70  JE7CB2BDXQCSMVKES0VG  Z8A2QP143CYYDYM4T1K0
examples/data/test.icechunk.zarr/transactions/: 36P78J05EYQGW1FKMFGG  9G86EJYM6F7FGZPFPK70  JE7CB2BDXQCSMVKES0VG  Z8A2QP143CYYDYM4T1K0
src/: lib.rs
tests/: array.rs
