[package]
name = "zarrs_icechunk"
version = "0.5.0"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.91"
description = "icechunk store support for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_icechunk"
repository = "https://github.com/zarrs/zarrs_icechunk"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "storage", "store", "icechunk"]
categories = ["encoding"]

[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
icechunk = "2.0.1"
tokio = "1.34.0"
zarrs_storage = { version = "0.4.0", features = ["async"] }

[[example]]
name = "virtualizarr_netcdf"
doc-scrape-examples = true

[dev-dependencies]
serde_json = "1.0.140"
tempfile = "3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.4"
ndarray = "0.17"
zarrs = { version = "0.23.0", features = [
  "async",
  "sharding",
  "gzip",
  "fletcher32",
  "zlib",
  "ndarray",
] }
zarrs_storage = { version = "0.4.0", features = ["async", "tests"] }

[patch.crates-io]
# zarrs = { git = "https://github.com/zarrs/zarrs.git", tag = "zarrs-v0.22.0-beta.2" }
# zarrs_storage = { git = "https://github.com/zarrs/zarrs.git", tag = "zarrs-v0.22.0-beta.2" }
